refactor: Organize and reformat code to merge with master